# Kattis-Problems

./: .gitignore  2048.cpp  3dprinter.cpp  BASIC_Interpreter.cpp  README.md  a1paper.cpp  aaah.cpp  akcija.cpp  autori.cpp  babelfish.cpp  baconeggsandspam.cpp  bard.cpp  bookingaroom.cpp  busyschedule.cpp  carrots.cpp  cold.cpp  compoundwords.cpp  cookieselection.cpp  cross.cpp  cups.cpp  detaileddifferences.cpp  dicegame.cpp  different.cpp  everywhere.cpp  faktor.cpp  fifa.cpp  filip.cpp  flexible.cpp  funhouse.cpp  gamerank-2.cpp  gamerank.cpp  gangur-1.cpp  gangur.cpp  grassseed.cpp  guessthedatastructure.cpp  halfacookie.cpp  herman.cpp  hradgreining.cpp  jackolantern_juxtaposition.cpp  kornislav.cpp  (+30 more)
Development/Mate In One Move/: .gitignore  CMakeLists.txt  Problem Description.odt  input.txt  main.cpp
Development/Mate In One Move/include/: Solver.h  Solver.inl
Development/Mate In One Move/src/: Solver.cpp
Development/Mate In One Move/tests/: mate_in_one_move.t.cpp
